# mbf-tp-qtservice

./: .gitignore  CMakeLists.txt  LICENSE  README.md  qtservice.cpp  qtservice.h  qtservice_p.h  qtservice_qobjects.h  qtservice_qobjects_unix.h  qtservice_qobjects_win.h  qtservice_unix.cpp  qtservice_win.cpp  qtunixserversocket.cpp  qtunixsocket.cpp
